[project]
name = "infrastructure2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "infrastructure-git-client",
    "infrastructure-message-bus",
    "infrastructure-path-utils",
    "infrastructure-settings-manager",
]


[tool.uv.workspace]
members = [
    "packages/*",
]

[tool.uv.sources]
infrastructure-git-client = { workspace = true } # быстрый гит клиент (автоматизация git add ., git commit ...)
infrastructure-message-bus = { workspace = true } # шина сообщений (логирование, общение приложений)
infrastructure-path-utils = { workspace = true } # функции для работы с файлами и путями
infrastructure-settings-manager = { workspace = true } # менеджеры настроек
