[project]
name = "infrastructure2"
version = "0.5.0"
description = "🧩 Монорепозиторий переиспользуемых утилит для Python-проектов. Централизованное управление, модульная установка."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "infrastructure-git-client",
    "infrastructure-message-bus",
    "infrastructure-path-utils",
    "infrastructure-settings-manager",
    "infrastructure-builder",
    "infrastructure-cli-utils",
    "infrastructure-http-clients",
    "infrastructure-other",
]

[tool.uv.workspace]
members = [
    "packages/*",
]

[tool.uv.sources.infrastructure-git-client]
workspace = true

[tool.uv.sources.infrastructure-message-bus]
workspace = true

[tool.uv.sources.infrastructure-path-utils]
workspace = true

[tool.uv.sources.infrastructure-settings-manager]
workspace = true

[tool.uv.sources.infrastructure-builder]
workspace = true

[tool.uv.sources.infrastructure-cli-utils]
workspace = true

[tool.uv.sources.infrastructure-http-clients]
workspace = true

[tool.uv.sources.infrastructure-other]
workspace = true
